--- a/HTML and CSS/CSS and Typography/01_Restaurant-Menu/restaurant-menu.css
+++ b/HTML and CSS/CSS and Typography/01_Restaurant-Menu/restaurant-menu.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-    font-family: 'Sentinel A', 'Sentinel B', 'Georgia', 'Times New Roman', 'Times', serif;
+    font-family: Sentinel A, Sentinel B, Georgia, Times New Roman, Times, serif;
     font-weight: 400;
     color: #747474;
     line-height: 1.15;
@@ -15,7 +15,7 @@ h1 {
 
 span {
 
-    font-family: 'Graphik Semibold Web', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-family: Graphik Semibold Web, Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-style: oblique;
     font-weight: 600;
     font-size: 16px;
@@ -24,7 +24,7 @@ span {
 }
 
 p {
-    font-family: 'Graphik Regular Web', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-family: Graphik Regular Web, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.46;
