--- a/HTML and CSS/Position and Grid/04_Navigation-float/style.css
+++ b/HTML and CSS/Position and Grid/04_Navigation-float/style.css
@@ -1,4 +1,32 @@
-body{
+body {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font: 14px/1.5 Georgia, serif;
+}
+
+blockquote{
+    font-family: Georgia, serif;
+}
+
+body {
+    font: inherit;
+    background-color: rgb(238, 238, 238);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    line-height: 1.2;
+}
+
+img {
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.25);
 }
